--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,8 @@ verify_ssl = true
 [packages]
 beautifulsoup4 = "*"
 requests = "*"
+jupyter = "*"
+pandas = "*"
 
 [requires]
 python_version = "3.7"
